# tauri-whatsapp-demo

./: package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  whatsapp_client.rs
