[package]
name = "tauri-whatsapp-demo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_whatsapp_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }

# Main library
whatsapp-rust = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }

# REQUIRED: You MUST add these specific crates separately because they are separate crates in the repo workspace
whatsapp-rust-tokio-transport = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
whatsapp-rust-ureq-http-client = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
whatsapp-rust-sqlite-storage = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
wacore-binary = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }

# ADD THIS LINE:
libsqlite3-sys = { version = "*", features = ["bundled"] }


